...
            "콜라", "사이다", "주스", "오렌지주스", "사과주스", "포도주스", "포도주", "생수", "물",
            "탄산수", "커피", "원두", "라떼", "녹차", "홍차", "보리차", "둥굴레차", "아이스티",
            "두유", "식혜", "음료", "에이드", "맥주", "소주", "와인", "막걸리"
        )
        reg(
            Category.DAIRY,
            "우유", "치즈", "요거트", "요구르트", "버터", "크림", "생크림", "휘핑크림", "연유",
            "분유", "딸기우유", "바나나우유", "초코우유", "모짜렐라", "체다"
        )
        reg(
            Category.SEASONING,
            "간장", "된장", "고추장", "쌈장", "소금", "설탕", "후추", "식초", "참기름", "들기름",
            "식용유", "올리브유", "카놀라유", "케첩", "마요네즈", "머스타드", "겨자", "굴소스",
...
            "대파", "쪽파", "파프리카", "양파", "마늘", "생강", "상추", "깻잎", "배추", "양배추",
            "시금치", "오이", "애호박", "단호박", "호박", "감자", "고구마", "당근", "무", "버섯",
            "브로콜리", "고추", "콩나물", "나물", "숙주", "토마토", "가지", "김치", "샐러드", "콜라비"
        )
        reg(
            Category.FRUIT,
            "사과", "배", "바나나", "딸기", "포도", "수박", "참외", "복숭아", "자두", "귤", "감귤",
            "한라봉", "오렌지", "레몬", "자몽", "키위", "망고", "블루베리", "체리", "파인애플",
            "아보카도", "무화과"
        )
        reg(
            Category.MEAT_EGG,
            "삼겹살", "목살", "항정살", "소고기", "쇠고기", "돼지고기", "닭", "닭가슴살", "치킨",
...
